--- a/executive/executive.css
+++ b/executive/executive.css
@@ -2,4 +2,27 @@ body {
     background-image: url("https://www.toperfect.com/pic/Oil%20Painting%20Styles%20on%20Canvas/Simple%20and%20Cheap/Free-hand%20paintings/3-mountain-cabin-Bob-Ross-freehand-landscapes.jpg");
     background-repeat: no-repeat;
     background-attachment: fixed;
+    background-size: cover;
   }
+
+h1 {
+    display: flex;
+    justify-content: center;
+  }
+
+h2 {
+    display: flex;
+    justify-content: center;
+  }
+
+#quote {
+    display: flex;
+    justify-content: center;
+    font-weight: bold;
+    font-style: italic;
+    color: gold;
+}
+
+h3 {
+    text-transform: uppercase;
+}
