added logo html to all pages

--- a/main/main.css
+++ b/main/main.css
@@ -45,19 +45,13 @@
     background-color: #fff;
     border-color: #fff;
   }
-  .brand-name {
-    font-family: 'Josefin Slab', serif;
-    font-size: 47px;
-    font-weight: bold;
-    color: #444;
-    text-decoration: none;
-  }
   
   .nav-container {
     padding-top: 8px;
   }
+
+  .img-responsive2{
+    height: 100%;
+    width: 25%;
   
-  .navbar-custom {
-    font-size: 20px;
-    background-color: #FFF;
-  }
+    }
