added logo html and reformated html html

--- a/main/main.css
+++ b/main/main.css
@@ -37,7 +37,7 @@
   
   /* Logo  */
   .navbar {
-    margin: 10px 0;
+    margin: 1% 0;
     float: left;
   
   }
@@ -47,7 +47,7 @@
   }
   
   .nav-container {
-    padding-top: 8px;
+    padding-top: 1%;
   }
 
   .img-responsive2{
