--- a/main/main.css
+++ b/main/main.css
@@ -1,16 +1,3 @@
-html, body {
-  height: 100%;
-}
-
-body {
-  display: flex;
-  flex-direction: column;
-}
-
-.content {
-  flex: 1 0 auto;
-}
-
 .name {
     display: flex;
     justify-content: center;
@@ -45,8 +32,6 @@ body {
     background-color: skyblue;
     color: white;
   }
-
-
   
   footer {
     background-color: #f3f3f3 ;
@@ -54,8 +39,7 @@ body {
     border: 1px solid #e7e7e7;
     position: -webkit-sticky; /* Safari */
     position: sticky;
-    top: 0;
-    flex-shrink: 0;
+    /* top: 0; */
     display: flex;
     justify-content: space-between;
     font-size: 17px;
